--- a/pom.xml
+++ b/pom.xml
@@ -37,9 +37,6 @@
             <version>1.2</version>
         </dependency>
 
-      
-    
-
         <dependency>
             <groupId>org.webjars.bower</groupId>
             <artifactId>jquery</artifactId>
@@ -50,6 +47,12 @@
             <groupId>org.webjars</groupId>
             <artifactId>popper.js</artifactId>
             <version>2.11.7</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.16.0-rc1</version>
         </dependency>
       
     </dependencies>
