--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,51 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+   
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
-  <servlet>
-    <servlet-name>LoginServlet</servlet-name>
-    <servlet-class>servlets.LoginServlet</servlet-class>
-</servlet>
-
-<servlet-mapping>
-    <servlet-name>LoginServlet</servlet-name>
-    <url-pattern>/login</url-pattern>
-</servlet-mapping>
-
-  <servlet>
-    <servlet-name>LogoutServlet</servlet-name>
-    <servlet-class>servlets.LogoutServlet</servlet-class>
-</servlet>
-
-<servlet-mapping>
-    <servlet-name>LogoutServlet</servlet-name>
-    <url-pattern>/logout</url-pattern>
-</servlet-mapping>
-
-<servlet>
-    <servlet-name>AccueillantServlet</servlet-name>
-    <servlet-class>servlets.AccueillantServlet</servlet-class>
-</servlet>
-<servlet-mapping>
-    <servlet-name>AccueillantServlet</servlet-name>
-    <url-pattern>/dashboardAccueillant</url-pattern>
-</servlet-mapping>
-
-
+    <servlet>
+        <servlet-name>LoginServlet</servlet-name>
+        <servlet-class>servlets.LoginServlet</servlet-class>
+    </servlet>
+      <servlet-mapping>
+        <servlet-name>LoginServlet</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>MedecinServlet</servlet-name>
+        <servlet-class>servlets.MedecinServlet</servlet-class>
+    </servlet>
+     <servlet-mapping>
+        <servlet-name>MedecinServlet</servlet-name>
+        <url-pattern>/MedecinServlet</url-pattern>
+    </servlet-mapping>
+  
+    <servlet>
+        <servlet-name>LogoutServlet</servlet-name>
+        <servlet-class>servlets.LogoutServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>LogoutServlet</servlet-name>
+        <url-pattern>/logout</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>AccueillantServlet</servlet-name>
+        <servlet-class>servlets.AccueillantServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>AccueillantServlet</servlet-name>
+        <url-pattern>/dashboardAccueillant</url-pattern>
+    </servlet-mapping>
     <!-- Configuration des pages d'erreur -->
     <error-page>
         <error-code>404</error-code>
         <location>/WEB-INF/errorpages/404.jsp</location>
     </error-page>
-
     <error-page>
         <error-code>500</error-code>
         <location>/WEB-INF/errorpages/500.jsp</location>
     </error-page>
-
-
-
 </web-app>
