--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,14 @@
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
+      <servlet>
+        <servlet-name>LoginProfessionelServlet</servlet-name>
+        <servlet-class>servlets.LoginProfessionnelServlet</servlet-class>
+    </servlet>
+      <servlet-mapping>
+        <servlet-name>LoginProfessionelServlet</servlet-name>
+        <url-pattern>/login_pro</url-pattern>
+    </servlet-mapping>
     <servlet>
         <servlet-name>MedecinServlet</servlet-name>
         <servlet-class>servlets.MedecinServlet</servlet-class>
